2008-10-12  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: Update from ctl to commands (EJAB-694)
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise

	* src/ejabberdctl.template: Move help print to a separate
	function (EJAB-694)

	* src/ejabberd_ctl.erl: Add frontend support for
	commands (EJAB-694). Categorization and sorting of commands in
	ejabberd_ctl help (EJAB-313). Lines in command line help of length
	80, and text formatting (EJAB-473)

	* src/ejabberd_app.erl: Initialize ejabberd_commands and start
	ejabbed_admin (EJAB-694)

	* src/ejabberd_admin.erl: Implement commands from old
	ejabberd_ctl (EJAB-694)

	* src/ejabberd_commands.erl: New 'ejabberd commands': separate
	command definition and calling interface (EJAB-694)
	* src/ejabberd_commands.hrl: Likewise

	* src/mod_proxy65/mod_proxy65.erl: Update so the listener starts
	correctly (EJAB-303)
	* src/mod_proxy65/mod_proxy65_service.erl: Likewise

	* src/ejabberd_app.erl: Start listeners explicitely at server
	start after everything else (EJAB-303). Implement support in
	ejabberd for 'independent listeners', which handle their
	connections themselves: gen_tcp:listen, etc.
	* src/ejabberd_listener.erl: Likewise
	* src/ejabberd_socket.erl: Likewise
	* src/ejabberd_sup.erl: Likewise

2008-10-07  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: uncomment pubsub_publish_item hook
	call (EJAB-765)

2008-10-07  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/mod_roster_odbc.erl: fix MySQL multiple requests issue.

2008-10-06  Badlop  <badlop@process-one.net>

	* doc/guide.html: Regenerated

2008-10-06  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/ejabberd_rdbms.erl: fix SQL database reconnection
	issues (EJAB-764) and add odbc_start_interval configuration
	directive (default to 30 seconds).
	* src/odbc/ejabberd_odbc.erl: likewise.