@@ -46,7 +46,9 @@
 	 register_iq_handler/4,
 	 register_iq_handler/5,
 	 unregister_iq_handler/2,
-	 ctl_process/2,
+	 connected_users/0,
+	 connected_users_number/0,
+	 user_resources/2,
 	 get_session_pid/3,
 	 get_user_info/3,
 	 get_user_ip/3
@@ -58,7 +60,7 @@
 
 -include("ejabberd.hrl").
 -include("jlib.hrl").
--include("ejabberd_ctl.hrl").
+-include("ejabberd_commands.hrl").
 
 -record(session, {sid, usr, us, priority, info}).
 -record(state, {}).
@@ -251,11 +253,7 @@ init([]) ->
 	      ejabberd_hooks:add(remove_user, Host,
 				 ejabberd_sm, disconnect_removed_user, 100)
       end, ?MYHOSTS),
-    ejabberd_ctl:register_commands(
-      [{"connected-users", "list all established sessions"},
-       {"connected-users-number", "print a number of established sessions"},
-       {"user-resources user server", "print user's connected resources"}],
-      ?MODULE, ctl_process),
+    ejabberd_commands:register_commands(commands()),
 
     {ok, #state{}}.
 
@@ -325,6 +323,7 @@ handle_info(_Info, State) ->
 %% The return value is ignored.
 %%--------------------------------------------------------------------
 terminate(_Reason, _State) ->
+    ejabberd_commands:unregister_commands(commands()),
     ok.
 
 %%--------------------------------------------------------------------
@@ -647,27 +646,46 @@ process_iq(From, To, Packet) ->
     end.
 
 
-ctl_process(_Val, ["connected-users"]) ->
-    USRs = dirty_get_sessions_list(),
-    NewLine = io_lib:format("~n", []),
-    SUSRs = lists:sort(USRs),
-    FUSRs = lists:map(fun({U, S, R}) -> [U, $@, S, $/, R, NewLine] end, SUSRs),
-    ?PRINT("~s", [FUSRs]),
-    {stop, ?STATUS_SUCCESS};
-ctl_process(_Val, ["connected-users-number"]) ->
-    N = length(dirty_get_sessions_list()),
-    ?PRINT("~p~n", [N]),
-    {stop, ?STATUS_SUCCESS};
-ctl_process(_Val, ["user-resources", User, Server]) ->
-    Resources =  get_user_resources(User, Server),
-    NewLine = io_lib:format("~n", []),
-    SResources = lists:sort(Resources),
-    FResources = lists:map(fun(R) -> [R, NewLine] end, SResources),
-    ?PRINT("~s", [FResources]),
-    {stop, ?STATUS_SUCCESS};
-ctl_process(Val, _Args) ->
-    Val.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% ejabberd commands
 
+commands() ->
+	[
+     #ejabberd_commands{name = connected_users,
+		       tags = [session],
+		       desc = "List all established sessions",
+		       module = ?MODULE, function = connected_users,
+		       args = [],
+		       result = {connected_users, {list, {sessions, string}}}},
+     #ejabberd_commands{name = connected_users_number,
+		       tags = [session, stats],
+		       desc = "Get the number of established sessions",
+		       module = ?MODULE, function = connected_users_number,
+		       args = [],
+		       result = {num_sessions, integer}},
+     #ejabberd_commands{name = user_resources,
+		       tags = [session],
+		       desc = "List user's connected resources",
+		       module = ?MODULE, function = user_resources,
+		       args = [{user, string}, {host, string}],
+		       result = {resources, {list, {resource, string}}}}
+	].
+
+connected_users() ->
+    USRs = dirty_get_sessions_list(),
+    SUSRs = lists:sort(USRs),
+    lists:map(fun({U, S, R}) -> [U, $@, S, $/, R] end, SUSRs).
+
+connected_users_number() ->
+    length(dirty_get_sessions_list()).
+
+user_resources(User, Server) ->
+    Resources =  get_user_resources(User, Server),
+    lists:sort(Resources).
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% Update Mnesia tables
 
 update_tables() ->
     case catch mnesia:table_info(session, attributes) of
